[package]
name = "poe-overlay-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
leptos-use = "0.10.10"
tauri-wasm = { git = "https://github.com/p1mo/tauri-wasm", features = [
    "all", # for all api bindings
] }
futures-util = "0.3.30"
chrono = { version = "0.4.38", features = [
    "serde",
    "alloc",
    "wasmbind",
    "now",
] }
shared = { path = "./shared" }

[workspace]
members = ["src-tauri", "shared"]
